# spyn

./: .gitignore  .zenodo.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
code/spyn/: __init__.py  install_spyn.py  pwscfnmr.py  simbolic.sh  spyn_core.py
code/spyn/scripts/: scraping.sh
docs/: comparison.md  installation.md  quickstart.md
docs/figures/: generate_workflow_comparison.py
docs/modules/: spyn_core.md
examples/lamivudine/: README.md  run_example.py
improve/: SPYN_publication_pipeline.md  pipeline_acoes_usuario.md
tests/: conftest.py  test_boltzmann.py  test_lorentz.py  test_parser_giao.py  test_parser_gipaw.py
