[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyn"
version = "2.0.0"
description = "GUI platform for NMR crystallography workflows (GIPAW/GIAO/Conformer Search)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jefferson Richard Dias da Silva" },
    { name = "Luiz Henrique Keng Queiroz Junior", email = "lhkengqueiroz@ufg.br" },
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.12",
    "pandas>=0.25",
    "numpy>=1.17",
    "scipy>=1.3",
    "matplotlib>=3.1",
]
keywords = [
    "NMR crystallography", "GIPAW", "GIAO", "solid-state NMR",
    "conformational search", "Boltzmann distribution", "Quantum ESPRESSO",
    "computational chemistry", "chemical shift", "Lorentzian",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/jeffrichardchemistry/spyn"
"Bug Tracker" = "https://github.com/jeffrichardchemistry/spyn/issues"
DOI = "https://doi.org/10.5281/zenodo.4019023"

[project.scripts]
spyn = "spyn.spyn_main:main"

[tool.setuptools.packages.find]
where = ["code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["spyn"]
omit = [
    "code/spyn/spyn_ui.py",
    "code/spyn/atompy_ui_backup.py",
    "code/spyn/spyn_main.py",
    "code/spyn/spyninit.py",
    "code/spyn/boltz.py",
    "code/spyn/clear.py",
    "code/spyn/csGA.py",
    "code/spyn/dir.py",
    "code/spyn/direct.py",
    "code/spyn/energy.py",
    "code/spyn/giao.py",
    "code/spyn/grepout.py",
    "code/spyn/imports.py",
    "code/spyn/install_spyn.py",
    "code/spyn/killprocess.py",
    "code/spyn/mplwidget.py",
    "code/spyn/plots.py",
    "code/spyn/pwscfnmr.py",
    "code/spyn/stylesprogbar.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
